Removed support for synchronous crawling - only fully asynch execution of all steps supported