@@ -16,13 +16,11 @@
 
 package com.github.web.scraping.lib.dom.data.parsing.steps;
 
-import com.gargoylesoftware.htmlunit.Page;
 import com.gargoylesoftware.htmlunit.WebWindow;
 import com.gargoylesoftware.htmlunit.html.DomNode;
 import com.gargoylesoftware.htmlunit.html.HtmlAnchor;
 import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import com.github.web.scraping.lib.dom.data.parsing.ParsingContext;
-import com.github.web.scraping.lib.dom.data.parsing.StepResult;
 import com.github.web.scraping.lib.parallelism.StepExecOrder;
 import lombok.extern.log4j.Log4j2;
 
@@ -50,43 +48,47 @@ public class ClickElement extends HtmlUnitParsingStep<ClickElement>
     }
 
     @Override
-    public <ModelT, ContainerT> List<StepResult> execute(ParsingContext<ModelT, ContainerT> ctx, ExecutionMode mode, OnOrderGenerated onOrderGenerated) {
-        StepExecOrder stepExecOrder = genNextOrderAfter(ctx.getPrevStepExecOrder(), onOrderGenerated);
+    public <ModelT, ContainerT> StepExecOrder execute(ParsingContext<ModelT, ContainerT> ctx) {
+        StepExecOrder stepExecOrder = genNextOrderAfter(ctx.getPrevStepExecOrder());
 
-        if (ctx.getNode() instanceof HtmlAnchor anch) {
+        Runnable runnable = () -> {
+            if (ctx.getNode() instanceof HtmlAnchor anch) {
 
-            Supplier<List<DomNode>> nodesSearch = () -> {
-                try {
-                    // TODO clean this mess ...
-                    HtmlPage currPage = anch.getHtmlPageOrNull();
-                    URL currUrl = currPage.getUrl();
-                    WebWindow enclosingWindow = currPage.getEnclosingWindow();
-                    log.debug("{} - {}: Clicking HtmlAnchor element at {}", stepExecOrder, getName(), anch.getHrefAttribute());
-                    HtmlPage nextPage2 = (HtmlPage) anch.click();
-                    // TODO we want to propagate this page in the context ... to the next steps ...
-                    HtmlPage nextPage = (HtmlPage) enclosingWindow.getEnclosedPage();
-                    URL nextUrl = nextPage.getUrl();
-                    log.debug("{} - {}: Loaded page URL after anchor clicked: {}", stepExecOrder, getName(), nextUrl.toString());
+                Supplier<List<DomNode>> nodesSearch = () -> {
+                    try {
+                        // TODO clean this mess ...
+                        HtmlPage currPage = anch.getHtmlPageOrNull();
+                        URL currUrl = currPage.getUrl();
+                        WebWindow enclosingWindow = currPage.getEnclosingWindow();
+                        log.debug("{} - {}: Clicking HtmlAnchor element at {}", stepExecOrder, getName(), anch.getHrefAttribute());
+                        HtmlPage nextPage2 = (HtmlPage) anch.click();
+                        // TODO we want to propagate this page in the context ... to the next steps ...
+                        HtmlPage nextPage = (HtmlPage) enclosingWindow.getEnclosedPage();
+                        URL nextUrl = nextPage.getUrl();
+                        log.debug("{} - {}: Loaded page URL after anchor clicked: {}", stepExecOrder, getName(), nextUrl.toString());
 //                  System.out.println(nextPage.asXml());
 
-                    if (nextPage2 != null) {
-                        return List.of(nextPage2);
-                    } else {
+                        if (nextPage2 != null) {
+                            return List.of(nextPage2);
+                        } else {
+                            return Collections.emptyList();
+                        }
+                    } catch (IOException e) {
+                        log.error("{}: Error while clicking element {}", getName(), anch, e);
                         return Collections.emptyList();
                     }
-                } catch (IOException e) {
-                    log.error("{}: Error while clicking element {}", getName(), anch, e);
-                    return Collections.emptyList();
-                }
-            };
-            @SuppressWarnings("unchecked")
-            HtmlUnitParsingExecutionWrapper<ModelT, ContainerT> wrapper = new HtmlUnitParsingExecutionWrapper<>(nextSteps, (Collecting<ModelT, ContainerT>) collecting, getName(), services);
-            return wrapper.execute(ctx, nodesSearch, stepExecOrder, mode);
+                };
+                @SuppressWarnings("unchecked")
+                HtmlUnitParsingExecutionWrapper<ModelT, ContainerT> wrapper = new HtmlUnitParsingExecutionWrapper<>(nextSteps, (Collecting<ModelT, ContainerT>) collecting, getName(), services);
+                wrapper.execute(ctx, nodesSearch, stepExecOrder);
 
-        } else {
-            log.warn("{}: No HtmlAnchor element provided -> cannot click element! Check the steps sequence above step {} and maybe provide search step for an anchor tag", getName(), getName());
-        }
-        return Collections.emptyList();
+            } else {
+                log.warn("{}: No HtmlAnchor element provided -> cannot click element! Check the steps sequence above step {} and maybe provide search step for an anchor tag", getName(), getName());
+            }
+        };
+
+        handleExecution(stepExecOrder, runnable);
+        return stepExecOrder;
     }
 
     @Override
